# aoc_2025

./: .gitignore  README.md  aoc_2025.opam  dune-project
.github/workflows/: premerge.yaml  runtest.yaml
dev-tools.locks/ocaml-lsp-server/: lock.dune
dune.lock/: lock.dune
lib/: battery.ml  dial.ml  dune  forklift.ml  id.ml
test/: dune  test_aoc_2025.ml
